--- a/K20113_10.md
+++ b/K20113_10.md
@@ -186,7 +186,7 @@
 
 ### 3-1. バージョン管理システムを利用することによるメリットはなにか
 
-個人開発においてのメリットとして、過去の更新を参照できるというメリットがある。改良しようと思ったが逆に悪くなってしまった、どこでバグのプログラムを入力してしまったか知りたい、という時に、
+個人開発においてのメリットとして、過去の更新を参照できるというメリットがある。改良しようと思ったが逆に悪くなってしまった、どこでバグのプログラムを入力してしまったか知りたい、という時に、どういう変更をしたかわからなくなっても過去の変更のログを参照する事で、どういった変更をしたかがわかるようになる。
 
 ### 3-2. Gitにおけるキーワード「clone」「commit」「push」「branch」「fetch」「pull」「merge」「rebase」についてそれぞれ何をするものか (他者に説明できるよう、わかりやすく簡潔な文章で表すこと)
 
