--- a/K20113_10.md
+++ b/K20113_10.md
@@ -187,9 +187,17 @@
 ### 3-1. バージョン管理システムを利用することによるメリットはなにか
 
 個人開発においてのメリットとして、過去の更新を参照できるというメリットがある。改良しようと思ったが逆に悪くなってしまった、どこでバグのプログラムを入力してしまったか知りたい、という時に、どういう変更をしたかわからなくなっても過去の変更のログを参照する事で、どういった変更をしたかがわかるようになる。
+また、グループ開発においても様々なメリットがある。富士通クラウドテクノロジーズ株式会社によると、バージョン管理システムを用いる事で、「誰が」「いつ」「どのような変更を行ったか」が分かりやすくなり、複数の人が同時に更新したことによる不整合などを防げる。(富士通クラウドテクノロジーズ株式会社『今さら聞けない！ バージョン管理システム「Git」とは？』https://pfs.nifcloud.com/navi/beginner/git.htm (2021年12月15日閲覧))
 
 ### 3-2. Gitにおけるキーワード「clone」「commit」「push」「branch」「fetch」「pull」「merge」「rebase」についてそれぞれ何をするものか (他者に説明できるよう、わかりやすく簡潔な文章で表すこと)
 
-
+clone:ネットワーク上に挙げられたリポジトリ(ファイルの変更履歴などを残す場所)をコピーして、自分の記録ができるローカルなリポジトリを制作する。
+commit:編集などの変更をした際に、ローカルリポジトリに変更の記録を残す。
+push:ローカルのリポジトリに記録された変更履歴をネットワーク上のリポジトリ(リモートリポジトリ)に反映させる事
+branch:目的別に記録ができるように、変更記録を並列化させる。
+fetch:リモートの変更履歴をローカルに反映させる。こちらはリモートにより近いブランチに反映される。
+pull:リモートの変更履歴をローカルに反映させる。こちらはローカルの中心な部分に反映される。
+merge:異なるブランチの変更をまとめて、リポジトリに反映させる。こちらはそれぞれのブランチの変更履歴が残る。
+rebase:異なるブランチの変更をまとめて、リポジトリに反映させる。こちらは変更履歴がどちらかに集約されてしまう。
 
 ### 3-3. プロジェクト進行に、GitHub Flowを採用することで解決できるチーム開発での問題はなにか (実際にGitHub Flowで作業する手順も説明する)
