--- a/K20113_11.md
+++ b/K20113_11.md
@@ -8,7 +8,11 @@
 
 ## 2. 担当箇所
 
+顔検出して枠で囲う
 
+openCVを用いて顔検出と枠の描画。
+
+なお、ファイル入力でエラーが発生。解決策を仰いだものの解決できず、結局他の人に一任。
 
 ## 3. チーム作業のログ
 
@@ -450,3 +454,5 @@
 
 ## 4. 感想
 
+今回は、まともに質問できず、ほとんどプログラムが組めなかったの悔やまれる。
+質問した際に、パスが間違ってるだとか、このモジュールを使えば便利と言われたものの、どのようにパスが間違ってたとか(後で見たところ、間違ってたパスすらこちらが勘違いしてた可能性が高い)モジュールの具体的な使い方がわからなかった(Googleでも調べたものの使い方が思い浮かばなかった)。欲を言えば、教えてくれる時にそういう具体的な間違いとか使い方とかを教えてほしいという気もするが、これらを質問しようとすると「そんなこともわからないめんどくさい奴」と思われるのが怖くて質問できず、結局一任という結果になってしまった。こんなことになるなら、めんどくさく思われようが質問して、最後まで完成させたかった(少なくともプログラム単体で動くようにしたかった)気がする。どうせバカなのだから、十分バカだと思われた方がいいのかなと、今回の結果から思えた。
