これで完成にしたいのに

--- a/K20113_12.md
+++ b/K20113_12.md
@@ -18,18 +18,19 @@
 - HTMLとCSSで盤面を作成、JavaScriptで選択した座標の送信を行う
 
 ## アプリ完成イメージ
-- ここにトップページの手書きいらすと（top_page.jpegもMoodleへアップロードした）
-- ここに画像リストページの手書きイラスト(image_list_page.jpeg)
-- ここに画像アップロードページの手書きいらすと(upload_page.jpeg)
-- ここに画像検索ページの手書きイラスト(search_page.jpeg)
+- 以下、松田
+- https://www.figma.com/file/StEIPmrnaRq0c7OZaZg4f7/Untitled?node-id=0%3A1
 
 ## 作業分担
 - cpuの機械学習（担当：松田）
 - 盤面の作成(フロントエンド機能)（主担当：宮島,蕪,副担当：岩尾）
 - 機能の作成(バックエンド機能)（主担当：笹田,野田,副担当：岩尾）
 - 質疑応答・その他諸々（担当：内山）
+
 ## 作業報告
-- 自分はJavaScriptの作成をした
+- 自分はJavaScriptの作成をした。
+- どんな盤面を作ろうか蕪君と相談し、参考にできそうなリンクについて松田君に相談した。
+- 進捗の都合上、HTMLとCSSについては岩尾君作成に変更。
 
 ## グループ内でお世話になった人2〜3名を理由とともに挙げる
 - 画像処理のベースプログラム実装を一緒にした(k20998 愛知花子)
