--- a/K20113_12.md
+++ b/K20113_12.md
@@ -18,7 +18,7 @@
 - HTMLとCSSで盤面を作成、JavaScriptで選択した座標の送信を行う
 
 ## アプリ完成イメージ
-- 以下、松田
+- 以下、松田雄飛が作成した完成イメージのリンク
 - https://www.figma.com/file/StEIPmrnaRq0c7OZaZg4f7/Untitled?node-id=0%3A1
 
 ## 作業分担
@@ -29,14 +29,16 @@
 
 ## 作業報告
 - 自分はJavaScriptの作成をした。
-- どんな盤面を作ろうか蕪君と相談し、参考にできそうなリンクについて松田君に相談した。
-- 進捗の都合上、HTMLとCSSについては岩尾君作成に変更。
+- どんな盤面を作ろうか蕪智裕と相談し、参考にできそうなリンクについて松田雄飛に相談した。
+- 進捗の都合上、HTMLとCSSについては岩尾拓則作成に変更。自分はJavaScriptのコードを書くことになった。
+- バックエンド側と、こちらが送信するデータと返ってくるデータについて調整をした。
+    - https://github.com/2021AIT-OOP2-G06/oop2-othello/pull/13
+    - 自分が作成する予定だった頃に、上のHTMLとCSSを編集したプルリクエストがマージされた。
 
 ## グループ内でお世話になった人2〜3名を理由とともに挙げる
-- 画像処理のベースプログラム実装を一緒にした(k20998 愛知花子)
-- プルリクエストを処理してくれた（k20999 愛知太郎）
-- 調べ物を手伝ってくれた(k20995 工業愛)
+- フロントエンドについて、どうすればデータのやり取りができるか相談した（k20040 蕪智裕）
+- HTMLとCSSを作成してもらった（k20017 岩尾拓則）
 
 ## 振り返り（感想含む）と次回までの作業予定
-- 計画通りに作業は進んでいる
-- 画像を取り扱う共通仕様は愛知花子と共同で作成したが，来週からは作業を分担してすすめる
+- 作業は少し遅れ気味で、担当変更をしたり、突貫作業が求められていたりする。
+- 正直どうすればいいかはっきりわからず不安な部分もあるので、次回はそこの解決が急務と思われる。
