--- a/K20113_12.md
+++ b/K20113_12.md
@@ -41,5 +41,5 @@
 
 ## 振り返り（感想含む）と次回までの作業予定
 - 作業は少し遅れ気味で、担当変更をしたり、突貫作業が求められていたりする。
-- 正直どうすればいいかはっきりわからず不安な部分もあるので、次回はそこの解決が急務と思われる。
+- 正直どうすればいいかはっきりわからず不安な部分もある。次回はそこの解決が急務と思われる。
 - 実際にデータの受け渡しができるかどうかも確認したい。
