--- a/K20113_14.md
+++ b/K20113_14.md
@@ -1,4 +1,4 @@
-# オブジェクト指向プログラミングおよび演習 第13回進捗レポート
+# オブジェクト指向プログラミングおよび演習 第14回進捗レポート
 
 ## 作成者
 - 学籍番号：K20113
@@ -19,7 +19,6 @@
 
 ## アプリ完成イメージ
 - 以下、松田雄飛が作成した完成イメージのリンク
-- 先週より変更が加えられている
 - https://www.figma.com/file/StEIPmrnaRq0c7OZaZg4f7/Untitled?node-id=0%3A1
 
 ## 作業分担
@@ -29,15 +28,17 @@
 - 質疑応答・その他諸々（担当：内山）
 
 ## 作業報告
-- 引き続きJavaScriptの作成
-- バックエンドと通信できるコードを書き始めた
-    - https://github.com/2021AIT-OOP2-G06/oop2-othello/pull/36
-    - 一連のHTMLとJavaScriptをまとめた上のPull Requestがマージされた。
+- トップページを改修
+- 手動で2人分動かせるボタンと、レベル別にCPU対戦ができるボタンを作成。
+- また、見栄えが良くなるように、背景画を設定した。
+    - https://github.com/2021AIT-OOP2-G06/oop2-othello/pull/41
+    - トップページを改修し、上のPull Requestがマージされた。
 
 ## グループ内でお世話になった人2〜3名を理由とともに挙げる
-- トップページを作ってもらった（k20040 蕪智裕）
-- JavaScriptについてどの様なコードを書けば良いのか指示してもらった（k20017 岩尾拓則）
+- トップページの原型を作ってもらった（k20040 蕪智裕）
+- 自分が作ったトップページをさらに作り直してもらった（k20109 松田雄飛）
+- 同上（k20092 野田蒼馬）
 
-## 振り返り（感想含む）と次回までの作業予定
-- 指示をもらったものの、後々具体的にどういう風にコードを追加すれば良いのかわからなくなってしまったので、次からはメモするように心がけたい。
+## 振り返り（感想含む）
+- 自分が想定したトップページの仕様と作って欲しい仕様が違ったので作り直したが、一応仕様変更に対応できるように作り替え前のコードをコメントアウトするなど、自分なりの工夫をしてみたりした。
 - 諸事情により、これから作業内容が大幅に変わる可能性がある。変わるにしても変わらないにしても、しっかり作業内容を聞けるようにしたい。
