--- a/K20113_14.md
+++ b/K20113_14.md
@@ -41,4 +41,4 @@
 
 ## 振り返り（感想含む）
 - 自分が想定したトップページの仕様と作って欲しい仕様が違ったので作り直したが、一応仕様変更に対応できるように作り替え前のコードをコメントアウトするなど、自分なりの工夫をしてみたりした。
-- 諸事情により、これから作業内容が大幅に変わる可能性がある。変わるにしても変わらないにしても、しっかり作業内容を聞けるようにしたい。
+- 結局のところ他の人にほぼ完全に作り直されたが、基本的な仕様は自分の作成したトップページが踏襲されてるように感じ、達成感を感じられてよかった。
